Updated HTML & Added CSS styles
Linked HTML to the css styles document and linked a google font. Then added background colors to the page and imported the css layout document into the styles document. Then styled the footers with colors and padding.

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
 <!--
@@ -7,13 +7,16 @@
     Case Problem 3
     
     Civil War History
-    Author: 
-    Date:   
+    Author: Ethan Gruenemeier   
+    Date: 9.7.18
 
-    Filename: cw_class.html
+    Filename: index.html
    -->
    <meta charset="utf-8" />
    <title>Civil War History</title>
+   <!-- linked the styles sheets to the html document and linked the limelight font from google fonts. -->
+   <link rel="stylesheet" href="cw_styles.css"/>
+   <link href="https://fonts.googleapis.com/css?family=Limelight" rel="stylesheet">
 </head>
 
 <body>
